--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -12,8 +12,8 @@
         <%= link_to '', '#', class:"nav-link" %>
       </li>
       <% if admin_signed_in? %>
-      <li class="nav-item active">
-          <%= link_to '', '#', class:"nav-link" %>
+        <li class="nav-item active">
+          <%= link_to 'Produtos', admin_products_path, class:"nav-link" %>
         </li>
         <li class="nav-item active">
           <%= link_to 'Sair', '#', method: :delete, class:"nav-link" %>
