--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,3 +1,3 @@
-<div class="alert alert-warning alert-dismissible fade show" role="alert">
+<div class="alert alert-warning" role="alert">
   <%= notice %> <%= alert %> <%=flash[:message]%>
 </div>
