teste show prdduto, especificando os parametros extra

--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,5 +1,7 @@
 <h2><%= @product.name%></h2>
-<%= link_to "Editar", edit_admin_product_path(@product) %>
+<ul>
+  <li><%= link_to "Editar", edit_admin_product_path(@product) %></li>
+</ul>
 <div>
   <li><%= @product.brand%></li>
   <li><%= number_to_currency @product.price%></li>
