--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -33,6 +33,7 @@
       <% if user_signed_in? %>
         <li class="nav-item active">
           <%= link_to 'Sair', destroy_user_session_path, method: :delete, class:"nav-link" %>
+          <%= link_to 'Meu Perfil', user_profile_path, class:"nav-link" %>
         </li>
       <% end %>
 
