--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Home</h1>
-<%# link_to "Produtos", , class:"btn btn-primary btn-sm" %>
+<%# link_to "Produtos", , class:"btn btn-primary btn-sm" %> 
+<% @products.each do |product|%>
+  <%= link_to product.name, product_path(product), class:"btn btn-primary btn-sm" %>
+  <%= product.brand %>
+  <%= product.price %>
+<% end %>
