Admin management account (#28)
* teste sucesso registration admin

* WIP - Admin registration

* refatorado registrantion teste admin

* WIP - Admin login

* WIP - Add test in blank

* password not match

* WIP - Admin registration

* Finalizado cadastro de admins

* adicionado index para sku

* finalizado correções de merge com produto e admin

Co-authored-by: Fabiane Albuquerque <bii.nett@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,12 @@
   </head>
 
   <body>
-   <%= render 'home/header' %>
+    <% if request.path.include?('admin') %>
+     <%= render 'shared/header_admin' %>
+    <% else %>
+     <%= render 'shared/header_user' %>
+    <% end %>
+    
     <div class="container">
       <br>
       <% if user_signed_in? %>
