--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,3 +1,4 @@
 <div class="alert alert-warning" role="alert">
+  <%#= render 'shared/messages' %>
   <%= notice %> <%= alert %> <%=flash[:message]%>
 </div>
