--- a/app/views/shared/_header_user.html.erb
+++ b/app/views/shared/_header_user.html.erb
@@ -11,17 +11,9 @@
       <li class="nav-item active">
         <%= link_to '', '#', class:"nav-link" %>
       </li>
-      <% if admin_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to 'Produtos', admin_products_path, class:"nav-link" %>
-        </li>
-        <li class="nav-item active">
-          <%= link_to 'Sair', '#', method: :delete, class:"nav-link" %>
-        </li>
-        <li class="nav-item active">
-          <%= link_to 'Editar conta', '#', method: :put, class:"nav-link" %>
-        </li>
-      <% elsif !admin_signed_in? && !user_signed_in? %>
+  
+
+      <% if !user_signed_in? %>
          <li class="nav-item active">
           <%= link_to 'Entrar', new_user_session_path, class:"nav-link" %>
         </li>
@@ -33,15 +25,6 @@
       <% if user_signed_in? %>
         <li class="nav-item active">
           <%= link_to 'Sair', destroy_user_session_path, method: :delete, class:"nav-link" %>
-        </li>
-      <% end %>
-
-      <% if admin_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to 'Sair Admin', '#', method: :delete, class:"nav-link" %>
-        </li>
-        <li class="nav-item active">
-          <%= link_to 'Editar conta', '#', method: :put, class:"nav-link" %>
         </li>
       <% end %>
     </ul>
