--- a/app/views/shared/_header_admin.html.erb
+++ b/app/views/shared/_header_admin.html.erb
@@ -11,13 +11,15 @@
       <li class="nav-item active">
         <%= link_to '', '#', class:"nav-link" %>
       </li>
-      
       <% if admin_signed_in? %>
         <li class="nav-item active">
           <%= link_to 'Produtos', admin_products_path, class:"nav-link" %>
         </li>
         <li class="nav-item active">
           <%= link_to 'Administradores', admin_registration_admins_path, class:"nav-link" %>
+        </li>
+        <li class="nav-item active">
+          <%= link_to 'Categorias', admin_categories_path, class:"nav-link" %>
         </li>
         <li class="nav-item active">
           <%= link_to 'Sair', destroy_admin_session_path, method: :delete, class:"nav-link" %>
