Cadastro de Endereços

--- a/app/views/user/addresses/index.html.erb
+++ b/app/views/user/addresses/index.html.erb
@@ -1,3 +1,7 @@
 <h2>Meus Endereços</h2>
-
+<% @addresses.each do |address| %>
+  <p><%= address.street %></p>
+  <p><%= address.number %></p>
+  <%= link_to 'Ver Mais', user_address_path(address) %>
+<% end %>
 <%= link_to 'Adicionar Endereço', new_user_address_path %>
