--- a/app/views/user/addresses/_form.html.erb
+++ b/app/views/user/addresses/_form.html.erb
@@ -1,3 +1,9 @@
+<% if address.errors.any? %>
+  <% address.errors.full_messages.each do |err| %>
+    <p><%= err %></p>
+  <% end %>
+<% end %>
+
 <%= form_with model: [:user, address] do |f| %>
   <%= f.label :state, 'Estado' %>
   <%= f.text_field :state %>
