--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/error_messages', resource: @category %>
 
-<h2>Nova Categoria</h2>
+<h2>Editar Categoria</h2>
 
 <% if  @category.name %>
   <%#= link_to "categoria pai: #{ @category.parent.first }", category_path(@category.category) %>
@@ -8,4 +8,4 @@
   <%#= link_to "categorias", admin_categories_path %>
 <% end %>
 
-<%= render 'form', url: admin_categories_path %>
+<%= render 'form', url: admin_category_path %>
