--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,7 +1,10 @@
 
 <% @categories.each do |category| %>
   <p>
-    <%= link_to category.name, '#' %>
+    <%= link_to category.name, edit_admin_category_path(category) %>
+  </p>
+  <p>
+    <%= category.status %>
   </p>
 <% end %>
 
