--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,19 +1,25 @@
 <h2>Nova Categoria</h2>
 
-<% if  @category.category %>
-  <%= link_to "categoria pai: #{ @category.category.name }", category_path(@category.category) %>
+<% if  @category.name %>
+  <%#= link_to "categoria pai: #{ @category.parent.first }", category_path(@category.category) %>
 <% else %>
-  <%= link_to "categorias", admin_categories_path %>
+  <%#= link_to "categorias", admin_categories_path %>
 <% end %>
 
 <%= form_with model: @category, url: admin_categories_path, local: true do |form| %>
   <p>
+    <%= form.label :name, 'Nome' %>
     <%= form.text_field :name %>
   </p>
 
   <p>
-    <%= form.label :subcategory_id, "Categoria pai" %>
-    <%= form.collection_select(:subcategory_id, @categories, :id, :name, {include_hidden: true, include_blank: true}, {multiple: false}) %>
+    <%= form.label :ancestry, "Categoria pai" %>
+    <%= form.collection_select(:ancestry, @categories, :id, :name, {include_hidden: true, prompt: 'Selecione'}, {multiple: false}) %>
+  </p>
+
+  <p>
+    <%= form.label :status, 'Status' %>
+    <%= form.select :status, Category.statuses.keys.collect { |status| [Category.human_enum_name(:status, status), status] } %>
   </p>
 
   <%= form.submit %>
