adicionar produto ao carrinho

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -44,6 +44,9 @@
           <%= link_to 'Editar conta', '#', method: :put, class:"nav-link" %>
         </li>
       <% end %>
+      <li class="nav-item active">
+        <%= link_to 'Carrinho', users_carts_path, class:"nav-link" %>
+      </li>
     </ul>
   </div>
 </nav>
