--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @product.name%></h2>
 <ul>
-  <li><%= link_to "Editar", edit_admin_product_path(@product) %></li>
+  <li><%= link_to "Editar", edit_admin_product_path(@product), class:"btn btn-dark btn-sm mb-1 mt-1" %></li>
 </ul>
 <div>
   <li><%= @product.brand%></li>
