--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,5 +3,5 @@
 <% @products.each do |product|%>
   <%= link_to product.name, product_path(product), class:"btn btn-primary btn-sm" %>
   <%= product.brand %>
-  <%= product.price %>
+  <%= number_to_currency product.price %>
 <% end %>
