--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -3,7 +3,7 @@
 <h2>Editar Categoria</h2>
 
 <% if @category.parent.present? %>
-  <%= link_to "categoria pai: #{ @category.parent.name }", edit_admin_category_path(@category.parent) %>
+  <%= link_to "Categoria Principal: #{ @category.parent.name }", edit_admin_category_path(@category.parent) %>
 <% end %>
 
 <%= render 'form', url: admin_category_path %>
