--- a/app/views/shared/_header_user.html.erb
+++ b/app/views/shared/_header_user.html.erb
@@ -25,7 +25,7 @@
       <% if user_signed_in? %>
         <li class="nav-item active">
           <%= link_to 'Sair', destroy_user_session_path, method: :delete, class:"nav-link" %>
-          <%= link_to 'Meus Pedidos', '#', method: :delete, class:"nav-link" %>
+          <%= link_to 'Meus Pedidos', user_orders_path , class:"nav-link" %>
         </li>
       <% end %>
     </ul>
