--- a/app/views/shared/_header_user.html.erb
+++ b/app/views/shared/_header_user.html.erb
@@ -23,6 +23,9 @@
 
       <% if user_signed_in? %>
         <li class="nav-item active">
+          <%= link_to 'Meus Pedidos', users_orders_path, class:"nav-link" %>
+        </li>
+        <li class="nav-item active">
           <%= link_to 'Sair', destroy_user_session_path, method: :delete, class:"nav-link" %>
         </li>
       <% end %>
