--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,8 +22,14 @@
     </div>
   <% end %>
   <% if @shippings %>
-   <%= form_with url: users_carts_path(product_id: @product), model: @cart do |f| %>
-      <%= f.collection_radio_buttons :shipping_id, @shippings, :shipping_id, :display_name %>
+    <%= form_with url: users_carts_path(product_id: @product), model: @cart do |f| %>
+      <% if @shippings.empty? %>
+        <div class="alert alert-secondary" role="alert">
+          <p>Não foi possível calcular o frete</p>
+        </div>
+      <% else %>
+        <%= f.collection_radio_buttons :shipping_id, @shippings, :shipping_id, :display_name %>
+      <% end %>
       <% if user_signed_in? %>
         <%= f.submit 'Adicionar ao carrinho', class:"btn btn-success btn-sm mb-1 mt-1" %>
       <% end %>
