--- a/app/views/users/carts/show.html.erb
+++ b/app/views/users/carts/show.html.erb
@@ -1,9 +1,14 @@
 <h1>Seu Carrinho</h1>
+
 <ul>
   <li><%= @cart.product.name %></li>
   <li><%= @cart.product.brand %></li>
   <li><%= number_to_currency(@cart.product.price) %></li>
   <li>Unidade(s): <%= @cart.quantity %></li>
   <li><%= number_to_currency(@cart.product.price) %></li>
-  <li>Frete: <%= @shipping.name %> - <%= number_to_currency(@shipping.price) %> - <%= @shipping.arrival_time %> dias úteis</li>
+  <% if !@shipping.name %>
+    <li>Frete indisponível</li>
+  <% else %>
+    <li>Frete: <%= @shipping.name %> - <%= number_to_currency(@shipping.price) %> - <%= @shipping.arrival_time %> dias úteis</li>
+  <% end %>
 </ul>
