--- a/app/views/users/orders/show.html.erb
+++ b/app/views/users/orders/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @order.product.name %></h1>
-<% byebug %>
-<p><%= number_to_currency @order.shipping_price %></p>
+<p><%= number_to_currency @shipping.price %></p>
+<p><%= @order.address.cep %></p>
 <p><%= current_user.email %></p>
 <p><%= number_to_currency @order.product.price %></p>
