--- a/app/views/users/carts/show.html.erb
+++ b/app/views/users/carts/show.html.erb
@@ -3,11 +3,11 @@
   <li><%= @cart.product.name %></li>
   <li><%= @cart.product.brand %></li>
   <li><%= number_to_currency(@cart.product.price) %></li>
-  <li>Unidade(s): <%= @cart.quantity %></li>
+  <li>Unidade(s): 1</li>
   <li><%= number_to_currency(@cart.product.price) %></li>
-  <% if !@shipping.name %>
-    <li>Frete indisponível</li>
-  <% else %>
+  <% if @shipping.name %>
     <li>Frete: <%= @shipping.name %> - <%= number_to_currency(@shipping.price) %> - <%= @shipping.arrival_time %> dias úteis</li>
+  <% else %>
+    <li>Frete indisponível</li>
   <% end %>
 </ul>
