--- a/app/views/shared/_header_user.html.erb
+++ b/app/views/shared/_header_user.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  
+
   <%= link_to "Página Inicial", root_path, class:"navbar-brand ms-4" %>
-  
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -24,7 +24,12 @@
       <% if user_signed_in? %>
         <li class="nav-item active">
           <%= link_to 'Sair', destroy_user_session_path, method: :delete, class:"nav-link" %>
+        </li>
+        <li class="nav-item active">
           <%= link_to 'Meu Perfil', user_profile_path, class:"nav-link" %>
+        </li>
+        <li class="nav-item active">
+          <%= link_to 'Meus Pedidos', my_orders_users_carts_path, class:"nav-link" %>
         </li>
       <% end %>
     </ul>
