--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,61 @@
  *= require_self
  *= require bootstrap
  */
+
+.navbar-dark .navbar-nav .nav-link:hover {
+  background: #e7ab3c;
+}
+
+.cart{
+  font-size: 18px;
+  color: #252525;
+  text-decoration: none;
+}
+
+.login-panel a {
+  font-size: 14px;
+  color: #252525;
+  display: inline-block;
+  padding: 18px 15px 15px 20px;
+  text-decoration: none;
+}
+  
+.login-panel i:before {
+  margin-right: 8px;
+}
+
+.search {
+  position: relative;
+  box-shadow: 0 0 40px rgba(51, 51, 51, .1)
+}
+
+.search input {
+  height: 50px;
+  text-indent: 25px;
+  border: 2px solid #d6d4d4
+}
+
+.search input:focus {
+  box-shadow: none;
+}
+
+.search .bi-search {
+  position: absolute;
+  top: 12px;
+  left: 16px;
+}
+
+.search button {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  height: 50px;
+  width: 50px;
+  font-size: 16px;
+  color: #ffffff;
+  position: absolute;
+  border: 1px solid #e7ab3c;
+  background: #e7ab3c;
+  padding: 12px 16px 12px;
+  cursor: pointer;
+}
