--- a/app/views/shared/_header_user.html.erb
+++ b/app/views/shared/_header_user.html.erb
@@ -24,7 +24,7 @@
       <% if user_signed_in? %>
         <li class="nav-item active">
           <%= link_to 'Sair', destroy_user_session_path, method: :delete, class:"nav-link" %>
-          <%= link_to 'Meus Pedidos', user_orders_path , class:"nav-link" %>
+          <%= link_to 'Meus Pedidos', user_carts_path , class:"nav-link" %>
           <%= link_to 'Meu Perfil', user_profile_path, class:"nav-link" %>
         </li>
       <% end %>
