--- a/app/views/users/carts/index.html.erb
+++ b/app/views/users/carts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Seu Carrinho</h1>
+<h1>t('.title')</h1>
 <div class="alert alert-warning alert-dismissible fade show d-inline-block" role="alert">
   <%= flash[:message] unless flash[:message].blank? %>
 </div>
@@ -6,12 +6,20 @@
   <ul>
     <li><%= link_to cart.product.name, users_cart_path(cart), class:"btn btn-success btn-sm mb-1 mt-1" %></li>
   </ul>
+
+  <p>t('.calculate_frete')</p>
+  <%= form_with url: product_shippings_options_path(product_id: cart.product_id), method: :get do |form| %>
+    <%= form.collection_radio_buttons :address_id, current_user.addresses, :id, :display_address %>
+    <%= form.submit t('.calculate_shipping'), class:"btn btn-success mb-1 mt-1" %>
+  <% end %>
+
   <%= form_with url: users_cart_path(cart), model: cart do |f| %>
 
-  <%= f.collection_radio_buttons :address_id, current_user.addresses, :id, :display_address %>
-    <%= link_to 'Cadastrar Endereço', new_user_address_path %>
-  <% if current_user.addresses.any? %>
-    <%= f.submit 'Finalizar Compra' %>
-  <% end %>
+    <%= link_to t('.new_address'), new_user_address_path %>
+    <% if current_user.addresses.any? && @shippings %>
+      <%= f.hidden_field :address_id, value: @address.id %>
+      <%= f.collection_radio_buttons :shipping_id, @shippings, :id, :display_name %>
+      <%= f.submit t('.update_order') %>
+    <% end %>
   <% end %>
 <% end %>
