modificando retorno Shipping.chosen

--- a/app/views/users/carts/show.html.erb
+++ b/app/views/users/carts/show.html.erb
@@ -4,7 +4,7 @@
   <li><%= @cart.product.brand %></li>
   <li><%= number_to_currency(@cart.product.price) %></li>
   <li>Unidade(s): 1</li>
-  <% if @shipping.name %>
+  <% if @shipping %>
     <li>Frete: <%= @shipping.name %> - <%= number_to_currency(@shipping.price) %> - <%= @shipping.arrival_time %> dias úteis</li>
   <% else %>
     <li>Frete indisponível</li>
