--- a/app/views/users/carts/index.html.erb
+++ b/app/views/users/carts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>t('.title')</h1>
+<h1><%= t('.title') %></h1>
 <div class="alert alert-warning alert-dismissible fade show d-inline-block" role="alert">
   <%= flash[:message] unless flash[:message].blank? %>
 </div>
