--- a/app/views/user/returns/index.html.erb
+++ b/app/views/user/returns/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Solicitação de devolução do pedido</h1>
 <% @returns.each do |ret| %>
-  <%= ret.status %>
+  <%= Return.human_attribute_name("status.#{ret.status}") %>
 <%end%>
