Atualizacao do estilo da busca

--- a/app/views/shared/_search_products.html.erb
+++ b/app/views/shared/_search_products.html.erb
@@ -1,7 +1,8 @@
 <div class="col-md-6">
-  <%= form_with url: search_path, method: :get do %>
-    <%= label_tag :query, t('.search') %>
-    <%= text_field_tag :query %>
-    <%= submit_tag t('.go'), class:"btn" %>
+  <%= form_with url: search_path, method: :get, class:"search" do |f| %>
+    <%= f.text_field :query, class: "form-control", placeholder: t('.search') %>
+    <%= f.button id: 'search_btn' ,class: 'btn' do %>
+      <i class="bi bi-search"></i>
+    <% end %>
   <% end %>
 </div>
