--- a/app/views/users/carts/order.html.erb
+++ b/app/views/users/carts/order.html.erb
@@ -12,3 +12,20 @@
   <li>Status <%= Cart.human_enum_name(:status, @cart.status) %></li>
   <li>Data da compra <%= l(@cart.created_at, format: :custom) %></li>
 </ul>
+<% if @user_evaluation.empty? %>
+  <%= form_with url: users_evaluations_path(product_id: @cart.product.id), model: @evaluation do |f| %>
+    <div class="field form-group">
+      <%= f.label :rate %>
+      <%= f.number_field :rate, in: 1..5, placeholder: 'Avaliação 1-5', class:"form-control" %>
+    </div>
+    <div class="field form-group">
+      <%= f.label :comment %>
+      <%= f.text_area :comment, placeholder: 'Comentário', class:"form-control" %>
+    </div>
+    <%= f.submit t('.submit'), class:"btn btn-success mb-1 mt-1" %>
+  <% end %>
+<% else %>
+  <ul>
+    <li><%= link_to 'Editar Avaliação', edit_users_evaluation_path(@user_evaluation.last), class:"btn btn-success btn-sm mb-1 mt-1" %></li>
+  </ul>
+<% end %>
