--- a/app/views/user/addresses/_form.html.erb
+++ b/app/views/user/addresses/_form.html.erb
@@ -3,16 +3,16 @@
     <p><%= err %></p>
   <% end %>
 <% end %>
-<div class="align-items-center">
+
 <%= form_with model: [:user, address] do |f| %>
     <div class="d-flex mb-1">
       <div class="col-sm-3 me-2">
         <%= f.label :state, 'Estado', class:"form-label" %>
-        <%= f.text_field :state, class:"form-control" %>
+        <%= f.text_field :state, class:"form-control", placeholder: 'Ex: SP' %>
       </div>
       <div class="col-sm-3">
         <%= f.label :city, 'Cidade', class:"form-label" %>
-        <%= f.text_field :city, class:"form-control" %>
+        <%= f.text_field :city, class:"form-control", placeholder: 'Ex: São Paulo' %>
       </div>
     </div>
 
@@ -23,7 +23,7 @@
       </div>
       <div class="col-sm-3">
         <%= f.label :neighborhood, 'Bairro', class:"form-label" %>
-        <%= f.text_field :neighborhood, class:"form-control" %>
+        <%= f.text_field :neighborhood, class:"form-control", placeholder: 'Teste' %>
       </div>
     </div>
 
@@ -42,7 +42,7 @@
       <%= f.label :details, 'Complemento', class:"form-label" %>
       <%= f.text_field :details, class:"form-control", style: "width: 51%" %>
     </div>
-      <%= f.submit button_text, class:"btn btn-primary justify-content-center" %>
+      <%= f.submit button_text, class:"btn btn-primary me-3" %>
+      <%= link_to 'Voltar', user_addresses_path %>
     </div>
 <%end%>
-</div>
