Remove placeholder de bairro

--- a/app/views/user/addresses/_form.html.erb
+++ b/app/views/user/addresses/_form.html.erb
@@ -23,7 +23,7 @@
       </div>
       <div class="col-sm-3">
         <%= f.label :neighborhood, 'Bairro', class:"form-label" %>
-        <%= f.text_field :neighborhood, class:"form-control", placeholder: 'Teste' %>
+        <%= f.text_field :neighborhood, class:"form-control" %>
       </div>
     </div>
 
