--- a/app/views/shared/_header_user.html.erb
+++ b/app/views/shared/_header_user.html.erb
@@ -18,7 +18,7 @@
             <%= link_to 'Sair', destroy_user_session_path,  method: :delete %>
           <% else %>
             <%= link_to new_user_session_path do %>
-              <i class="bi bi-person-fill"></i><strong>sEntrar</strong>
+              <i class="bi bi-person-fill"></i><strong>Entrar</strong>
               <%= link_to 'Registrar-se', new_user_registration_path %>
             <% end %>
           <% end %>
