--- a/app/views/users/carts/index.html.erb
+++ b/app/views/users/carts/index.html.erb
@@ -12,16 +12,27 @@
 
   <p><%= t('.calculate_frete') %>s</p>
   <%= form_with url: product_shippings_options_path(product_id: cart.product_id), method: :get do |form| %>
-    <%= form.collection_radio_buttons :address_id, current_user.addresses, :id, :display_address %>
+    <%= form.collection_radio_buttons :address_id, current_user.addresses, :id, :display_address  do |b| %>
+      <div class="radio">
+        <%= b.label do %>
+          <%= b.radio_button + b.text %>
+        <% end %>
+      </div>
+    <% end %>
     <%= form.submit t('.calculate_shipping'), class:"btn btn-success mb-1 mt-1" %>
   <% end %>
 
   <%= form_with url: users_cart_path(cart), model: cart do |f| %>
-
     <%= link_to t('.new_address'), new_user_address_path %>
     <% if current_user.addresses.any? && @shippings %>
       <%= f.hidden_field :address_id, value: @address.id %>
-      <%= f.collection_radio_buttons :shipping_id, @shippings, :to_json, :display_name %>
+      <%= f.collection_radio_buttons :shipping_id, @shippings, :to_json, :display_name do |b| %>
+        <div class="radio">
+          <%= b.label do %>
+            <%= b.radio_button + b.text %>
+          <% end %>
+        </div>
+      <% end %>
       <%= f.submit t('.update_order') %>
     <% end %>
   <% end %>
