Add estilo em paginas de admin, nav, categories, products

--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,20 +1,18 @@
 <%= form_with model: @category, url: url, local: true do |form| %>
-  <p>
+  <div class="field form-group">
     <%= form.label :name, 'Nome' %>
-    <%= form.text_field :name %>
-  </p>
-
-  <p>
+    <%= form.text_field :name, class:"form-control" %>
+  </div>
+  <br>
+  <div class="field form-group">
     <%= form.label :ancestry, "Categoria Principal" %>
     <%= form.collection_select(:ancestry, @categories, :id, :name, {include_hidden: true, prompt: 'Selecione'}, {multiple: false}) %>
-  </p>
-
-  <p>
+  </div>
+  <br>
+  <div class="field form-group">
     <%= form.label :status, 'Status' %>
     <%= form.select :status, Category.statuses.keys.collect { |status| [Category.human_enum_name(:status, status), status] } %>
-  </p>
-
-  <%= form.submit %>
+  </div>
+  <br>
+  <%= form.submit class:"btn btn-primary btn-sm" %>
 <% end %>
-
-<%= link_to "Categorias", admin_categories_path %>
