--- a/app/views/admin/registration_admins/new.html.erb
+++ b/app/views/admin/registration_admins/new.html.erb
@@ -1,10 +1,11 @@
 <h2><%= t('.title') %></h2>
-
+<br>
 <%= form_with model: @admin, url: admin_registration_admins_path do |f| %>
   <%= render "shared/error_messages", resource: @admin %>
-
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-
-  <%= f.submit %>
+  <div class="field form-group">
+    <%= f.label :email %>
+    <%= f.text_field :email, class:"form-control" %>
+  </div>
+  <br>
+  <%= f.submit class:"btn btn-primary btn-sm" %>
 <% end %>
