--- a/app/views/admins/passwords/new.html.erb
+++ b/app/views/admins/passwords/new.html.erb
@@ -1,16 +1,16 @@
-<h2><%= t('.title') %></h2>
-
+<h2 class="text-center"><%= t('.title') %></h2>
+<br>
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "admins/shared/error_messages", resource: resource %>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control" %>
   </div>
-
+<br>
   <div class="actions">
-    <%= f.submit t('.send_reset_password') %>
+    <%= f.submit t('.send_reset_password'), class:"btn btn-primary" %>
   </div>
 <% end %>
-
+<br>
 <%= render "admins/shared/links" %>
