--- a/app/views/shared/_header_user.html.erb
+++ b/app/views/shared/_header_user.html.erb
@@ -12,7 +12,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><%= link_to 'Meu Perfil', user_profile_path, class:"dropdown-item" %></li>
-                <li><%= link_to 'Meus Pedidos', my_orders_users_carts_path, class:"dropdown-item" %></li>
+                <li><%= link_to 'Meus Pedidos', my_orders_user_carts_path, class:"dropdown-item" %></li>
               </ul>
             </li>
             <%= link_to 'Sair', destroy_user_session_path,  method: :delete %>
@@ -30,7 +30,7 @@
     <div class="row d-flex justify-content-end align-items-center">
       <%= render 'shared/search_products' %>
       <div class="col-md-3">
-        <%= link_to users_carts_path, class: 'cart' do %>
+        <%= link_to user_carts_path, class: 'cart' do %>
           <i class="bi bi-cart3"></i> <strong>R$ 150,00</strong>
         <% end %>
       </div>
