--- a/app/views/user/carts/index.html.erb
+++ b/app/views/user/carts/index.html.erb
@@ -5,7 +5,7 @@
 <% @carts.each do |cart| %>
   <% if !cart.delivered? %>
     <ul>
-      <li><%= link_to cart.product.name, users_cart_path(cart), class:"btn btn-success btn-sm mb-1 mt-1" %></li>
+      <li><%= link_to cart.product.name, user_cart_path(cart), class:"btn btn-success btn-sm mb-1 mt-1" %></li>
     </ul>
   <% end %>
 
@@ -21,7 +21,7 @@
     <%= form.submit t('.calculate_shipping'), class:"btn btn-success mb-1 mt-1" %>
   <% end %>
 
-  <%= form_with url: users_cart_path(cart), model: cart do |f| %>
+  <%= form_with url: user_cart_path(cart), model: cart do |f| %>
     <%= link_to t('.new_address'), new_user_address_path %>
     <% if current_user.addresses.any? && @shippings %>
       <%= f.hidden_field :address_id, value: @address.id %>
