--- a/app/views/user/carts/my_orders.html.erb
+++ b/app/views/user/carts/my_orders.html.erb
@@ -2,7 +2,7 @@
 <%= link_to 'Minhas Devoluções', user_returns_path %>
 <% @carts.each do |cart| %>
   <ul>
-    <%= link_to cart.product.name, order_users_cart_path(cart), class:"btn btn-success btn-sm mb-1 mt-1" %>
+    <%= link_to cart.product.name, order_user_cart_path(cart), class:"btn btn-success btn-sm mb-1 mt-1" %>
     <p>Data da compra <%= l(cart.created_at, format: :custom) %></p>
     <% if cart.elegible_for_return %>
       <li><%= link_to 'Solicitar Devolução', return_product_user_cart_path(cart), method: :post %></li>
