--- a/app/views/user/carts/order.html.erb
+++ b/app/views/user/carts/order.html.erb
@@ -23,7 +23,7 @@
       </div>
     </ul>
   <% end %>
-  <%= form_with url: users_evaluations_path(product_id: @cart.product.id, cart_id: @cart), model: @evaluation do |f| %>
+  <%= form_with url: user_evaluations_path(product_id: @cart.product.id, cart_id: @cart), model: @evaluation do |f| %>
     <div class="field form-group">
       <%= f.label :rate %>
       <%= f.number_field :rate, in: 1..5, placeholder: 'Avaliação 1-5', class:"form-control" %>
@@ -36,6 +36,6 @@
   <% end %>
 <% else %>
   <ul>
-    <li><%= link_to 'Editar Avaliação', edit_users_evaluation_path(@user_evaluation.last), class:"btn btn-success btn-sm mb-1 mt-1" %></li>
+    <li><%= link_to 'Editar Avaliação', edit_user_evaluation_path(@user_evaluation.last), class:"btn btn-success btn-sm mb-1 mt-1" %></li>
   </ul>
 <% end %>
