--- a/app/views/users/carts/index.html.erb
+++ b/app/views/users/carts/index.html.erb
@@ -1,7 +1,9 @@
 <h1><%= t('.title') %></h1>
+<% if !flash[:message].blank? %>
 <div class="alert alert-warning alert-dismissible fade show d-inline-block" role="alert">
-  <%= flash[:message] unless flash[:message].blank? %>
+  <%= flash[:message] %>
 </div>
+<% end %>
 <div>
   <% @carts.each do |cart| %>
     <% if !cart.delivered? %>
@@ -9,17 +11,18 @@
         <li><%= link_to cart.product.name, users_cart_path(cart), class:"btn btn-success btn-sm mb-1 mt-1" %></li>
       </ul>
     <% end %>
-
-  <p><%= t('.calculate_frete') %>s</p>
-  <%= form_with url: product_shippings_options_path(product_id: cart.product_id), method: :get do |form| %>
-    <%= form.collection_radio_buttons :address_id, current_user.addresses, :id, :display_address  do |b| %>
-      <div class="radio">
-        <%= b.label do %>
-          <%= b.radio_button + b.text %>
-        <% end %>
-      </div>
+  <% if @shippings == nil %>
+    <p><%= t('.calculate_frete') %></p>
+    <%= form_with url: product_shippings_options_path(product_id: cart.product_id), method: :get do |form| %>
+      <%= form.collection_radio_buttons :address_id, current_user.addresses, :id, :display_address  do |b| %>
+        <div class="radio">
+          <%= b.label do %>
+            <%= b.radio_button + b.text %>
+          <% end %>
+        </div>
+      <% end %>
+      <%= form.submit t('.calculate_shipping'), class:"btn btn-success mb-1 mt-1" %>
     <% end %>
-    <%= form.submit t('.calculate_shipping'), class:"btn btn-success mb-1 mt-1" %>
   <% end %>
 
   <%= form_with url: users_cart_path(cart), model: cart do |f| %>
