testes rspec ok

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,7 +15,7 @@
 <div>
   <% if @quantity.positive? %>
     <h4>Estimar frete</h4>
-    <%= form_with url: product_shippings_path(product_id: @product), method: :get do |f| %>
+    <%= form_with url: product_shippings_path(product_id: @product, shiping_id: @shipping), method: :get do |f| %>
       <div class="field form-group">
         <%= f.label :address_string, 'Endereço' %>
         <%= f.text_field :address_string, placeholder: "Nº Rua X, Bairro, Cidade, Estado", class:"form-control" %>
